<resources>
    <string name="app_name">MyPawnShop</string>
    <string name="register_your_mobile_no">Register your mobile number</string>
    <string name="mob_no">Mobile Number</string>
    <string name="enter_mob_no">Enter Mobile Number</string>
    <string name="recieve_otp">Receive otp</string>
    <string name="plz_give">Please give your mobile number in order to register.We will be consider this number as primary mobile number.</string>
    <string name="verify">Verify your mobile number</string>
    <string name="plz_enter_otp">Please enter OTP</string>
    <string name="edit"><u>Edit</u></string>
    <string name="submit">Submit otp</string>
    <string name="plz_ensure">Please ensure you are using the same mobile number on this phone as mentioned above. In case there\'s mismatch, tap EDIT and enter the correct number.</string>
    <string name="protect_ur_account">Protect your account</string>
    <string name="set_mpin">Set a mPIN as password for your account</string>
    <string name="choose">Choose a PIN of your choice</string>
    <string name="plz_reenter_pin">Please Re-Enter the PIN</string>
    <string name="welcome_to_app">Welcome to App</string>
    <string name="plz_enter_full_name">Please enter your full name to create your account</string>
    <string name="enter_ur_name">Enter your name</string>
    <string name="create_my_account">Create My Account</string>
    <string name="by_creating_an_account">By creating an account,you agrees with   </string>
    <string name="team_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="team_conditions_without_underline">Terms &amp; Conditions</string>
    <string name="customer_name">Customer Name</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="add_number"> <u>Add Number</u></string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_dob">Enter Date of Birth</string>
    <string name="martial_status">Martial Status</string>
    <string name="select_status">Select a Status</string>
    <string name="address"> Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="next">Next</string>
    <string name="customer_id">Customer ID</string>
    <string name="customer_details">Customer Details</string>
    <string name="create_loan">Create Loan</string>
    <string name="items_details">Item Details</string>
    <string name="add_item">Add Item</string>
    <string name="no_item_added">No Item has added</string>
    <string name="item_add">Item Add</string>
    <string name="item_id">Item ID</string>
    <string name="item_weight">Item Weight</string>
    <string name="item_name">Item Name</string>
    <string name="item_qty">Item Quality</string>
    <string name="item_market_value">Item Market Value</string>
    <string name="item_keeping_unit">Item Keeping Unit   (optional)</string>
    <string name="item_description">item Description  (optional)</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="selct_item_qty">Select Item Quantity</string>
    <string name="ebitem_market_value">Item Market Value</string>
    <string name="enter_item_keeping_unit">Enter Keeping Unit</string>
    <string name="enter_description">Enter Description</string>
    <string name="upload">Upload</string>
    <string name="browse">browse</string>
    <string name="save">Save</string>
    <string name="TestButton">TestButton</string>
    <string name="getgold">Get Gold Price</string>
    <string name="sent_to_this_number">We have sent a OTP to +91 XXXXXXXX</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Estimate</string>
    <string name="title_dashboard">Gold Price</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Create Loan</string>
    <string name="title_estimation">Estimate</string>
    <string name="title_activity_drawer_nav">drawer_nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">+91 XXXXXXXXXX</string>
    <string name="nav_header_subtitle">PawnShopOwner</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Total_Loan">Total Loan Amount</string>
    <string name="Eligible_Amount">Eligible Amount</string>
    <string name="menu_home">Estimate</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_gallery">Reports</string>
    <string name="menu_slideshow">Account Management</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="submenu_app1">Money Lending App</string>
    <string name="submenu_app2">Apartment Maintatenance App</string>
    <string name="todo">TODO</string>
    <string name="company_name">copyright @ blackwinsstudio</string>
    <string name="title_estimate">Calculate Eligible Loan Amount</string>
    <string name="Per_gram">Per Gram /Sovergin</string>
    <string name="spinner_prompt">Select gram</string>
<string name="InterestAmount">InterestAmount</string>
    <string name="InterestType">InterestType</string>
<string name="SelectMonth">Interest Period in (Months) </string>
    <string name="interest_spinner_prompt">Select type</string>

    <!-- Item -->

</resources>