<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".Register_mobile_number">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/register_your_mobile_no"
        android:textColor="#EF6C00"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="17sp"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/black"
        android:text="@string/mob_no" />

    <EditText
        android:id="@+id/RegMob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/enter_mob_no"

        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner_button"
        android:fontFamily="@font/lato_regular"
        android:onClick="recieve_otp"
        android:text="@string/recieve_otp"
        android:textColor="#4E342E"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="18sp"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/black"
        android:text="@string/plz_give" />

    <Button
        android:id="@+id/TestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner_button"
        android:fontFamily="@font/lato_regular"
        android:onClick="recieve_otp"
        android:text="@string/TestButton"
        android:visibility="invisible" />
</LinearLayout>