<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".create_loan">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/customer_name"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/CusName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/enter_customer_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/mob_no"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/CusPrimaryMobileNo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/enter_mob_no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/AddNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/add_number"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/choose_gender" />

            <RadioGroup
                android:id="@+id/GenderRadiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/MaleRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/FemaleRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/female" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/date_of_birth"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/CusDOB"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/rounded_corner_button"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/date_of_birth"
                android:minHeight="48dp"

                android:text=""
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/martial_status"
                android:textSize="15dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"

                android:minHeight="48dp"
                android:textSize="15dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/address"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/CusAddress"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="15dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_gravity="right"
                android:fontFamily="@font/lato_regular"
                android:text="110/120" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/saveCustomerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight=".70"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_corner_button"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>