<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".CreateItem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="@font/lato_bold"
                android:text="@string/item_add"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/item_name" />

            <EditText
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/enter_item_name"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/item_weight" />

            <EditText
                android:id="@+id/itemWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:hint="Enter Item Weight"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/item_qty" />

            <Spinner
                android:id="@+id/itemQuality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/item_market_value" />

            <EditText
                android:id="@+id/itemMarketValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/item_market_value"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/item_keeping_unit" />

            <Spinner
                android:id="@+id/itemKeepingUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/item_description" />

            <EditText
                android:id="@+id/itemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/enter_description"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="4dp"
                android:fontFamily="@font/lato_regular"
                android:text="110/120" />
            <ImageView
                android:id="@+id/ItemImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_menu_gallery" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_white_bg_button"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="20dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="150dp"
                    app:srcCompat="@drawable/ic_baseline_cloud_upload_24dp" />

                <TextView
                    android:id="@+id/itemImageUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/upload"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/imageUploadProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <Button
                android:id="@+id/ItemSaveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corner_button"
                android:fontFamily="@font/lato_regular"
                android:text="@string/save"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>