<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".verify">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/verify"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_regular"
        android:text="We have sent a OTP to +91892949824" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="end"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/colorPrimary"
        android:text="@string/edit" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/black"
        android:text="@string/plz_enter_otp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/lato_regular"
            android:hint="0"
            android:ems="10"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:hint="0"
            android:inputType="number"
             />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:hint="0"
            android:inputType="number"
             />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:hint="0"
            android:inputType="number"
            />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="submit_otp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/plz_ensure" />

</LinearLayout>